# project_pipeline_anp

./: .gitignore  pyproject.toml
pipeline/pipeline/: constants.py  upload_gcs.py  web_scrapping_anp.py
