[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["tricktx <patrick.tx@hotmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
numpy = "^1.26.4"
dbt-core = "^1.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
